--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "printWidth": 80,
     "semi": true,
     "singleQuote": true,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "proseWrap": "always"
   },
   "name": "react-use-loading",
   "author": "Graham Barber",
